test/simple/typeerrors/Examples/TooGenFun.hs
module TooGenFun where

test :: a -> a
test = not
